# suite-clinica

./: .dockerignore  .gcloudignore  .geminiignore  .gitignore  API_DOCUMENTATION_README.md  BACKEND_ANALYSIS_SUMMARY.md  BACKEND_DOCUMENTATION_INDEX.md  BACKEND_DOCUMENTATION_VERIFICATION.txt  BACKEND_QUICK_REFERENCE.md  COMPLETION_SUMMARY.md  Dockerfile  ENDPOINTS_MAPPING.md  FRONTEND_API_ENDPOINTS.json  FRONTEND_API_ENDPOINTS.md  FRONTEND_API_ENDPOINTS_SUMMARY.csv  README.md  SupportWidget.js  TEST_INVENTORY.md  TEST_SUITE_ANALYSIS.md  TEST_SUITE_DOCUMENTATION.md  TEST_SUITE_PROGRESS.md  TODO.md  backend_structure_analysis.md  cloudbuild-test.yaml  cloudbuild.yaml  dev.sh  esempi_check.csv  start.sh  stop.sh  version-2.0-updated-integration-checklist.md
backend/: .env.example  TEST_EXECUTION_REPORT.md  TEST_FIX_COMPLETION_REPORT.md  conftest.py  full_test_results.txt  insert_hm_test_data.py  list_forms.py  pyproject.toml  run_tests.sh  seed_call_bonus_test.py  simulate_webhook.py  test_check_radio_bug.py  test_check_radio_bug_v2.py  test_check_radio_display.py  test_ghl_ai_assignment_flow.py  test_ghl_flow.py  test_ghl_opportunity_data_webhooks.py  test_ghl_webhook.py  test_results.txt  test_team_leader_production.py
backend/backups/: db_backup_20260202_154552.sql
backend/corposostenibile/: __init__.py  celery_app.py  celery_config.py  cli.py  config.py  extensions.py  health.py  models.py  package_requirements.py  package_support.py
backend/migrations/: README
backend/scripts/: README_SEED.md  ensure_app_notifications_table.py  ensure_marketing_schema.py  export_pcos_clients.py  fix_import_team.py  import_clienti_csv.py  import_example_checks.py  populate_formazione.py  populate_teams.py  populate_test_stories.py  purge_ai_analysis_errors.py  seed_200_weekly_checks.py  seed_clients_step2_storia.py  seed_clients_step3_programma.py  seed_clients_step9_weekly_checks.py  seed_dashboard_test_users.py  seed_fake_clients.py  seed_fake_professionals.py  seed_ghl_test_leads_realistic.py  seed_hm_history_from_saleslead.py  seed_marketing_demo.py  seed_news_lancio.py  seed_old_suite_test_leads.py  seed_tasks_demo.py  seed_test_data.py  seed_test_pausa_scadenza.py  seed_test_users.py  seed_training.py  send_weekly_check_summary_email.py  setup_gemini_key_local.sh  sync_criteria_prod.py
backend/tests/: README.md  conftest.py  factories.py  setup_test_db.py  test_dashboard_endpoints.py  (+4 more)
(+1770 files in other folders)
